--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 #root, html, body{
   height: 100%;
-  background-color: #008B8B;
+  background: linear-gradient(to bottom right, #7b4397, #dc2430);
 }
 
 h2{
@@ -144,7 +144,8 @@ button.registerButton{
 }
 
 button{
-  background-color: darkcyan;
+  background-color: #86408B;
+  /* background: linear-gradient(to bottom right, blue, pink); */
   border: none;
   color: white;
   cursor: pointer;
@@ -184,6 +185,6 @@ button:disabled{
 }
 
 .login input:focus{
-  border-bottom: 2px solid lightblue;
+  border-bottom: 2px solid #86408B;
   outline: none;
 }
