--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,14 +51,14 @@ button.registerButton{
 .dashboard header{
   text-align: center;
   padding: 0.5rem;
-  border-bottom: 1px solid lightblue;
+  border-bottom: 1px solid #86408B;
 }
 
 .dashboard footer{
   display: flex;
   justify-content: space-around;
   padding: 0.5rem;
-  border-top: 1px solid lightblue;
+  border-top: 1px solid #86408B;
 }
 
 .msg-success{
@@ -122,7 +122,7 @@ button.registerButton{
   background-color: #E9FFFF;
   height: 40%;
   width: 25%;
-  border: 1px solid lightgrey;
+  border: 1px solid #86408B;
   padding: 1rem;
   display: flex;
   justify-content: space-around;
